# Gloria-M-SDK

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py
demos/: 01_gripper_quicktest.py  01_mit_quickstart.py  02_mit_gripper_clamp_release.py  02_pv_control.py  03_mit_linkage_force_control.py  03_mit_torque_control.py  04_mit_linkage_force_control_4340.py  04_pv_position_accuracy.py  05_change_can_mst_id.py  06_mit_linkage_force_control.md  06_mit_linkage_force_control.py  07_mit_close_test.py  08_mit_linkage_follow_input_close_q.py  mit_close_baseline.py
demos/baseline/: close_baseline_4310.csv  close_baseline_4340.csv  close_baseline_raw.csv
docs/: api_reference.md  getting_started.md
examples/: advanced_usage.py  basic_usage.py
gloria_msdk/: __init__.py  constants.py  exceptions.py  utils.py
gloria_msdk/core/: __init__.py  command_sender.py  data_reader.py  serial_manager.py
gloria_msdk/models/: __init__.py  command.py  device_status.py
motor/: DM_CAN.py  TorqueGuard_Demo.py  XY_Motor_Dome.py  XuanYa_Comm.py
src/gloria_m_sdk/: __init__.py  actuator.py  client.py  constants.py  controller.py  exceptions.py  gripper_baseline.py  param_config.py  protocol_mit.py  registers.py  serial_can_adapter.py  transport.py  types.py
src/gloria_m_sdk/api/: __init__.py  base.py  motion_api.py  motor_api.py  param_api.py
tests/: conftest.py  test_baseline.py  test_client.py  test_command_sender.py  test_data_reader.py  test_protocol_mit.py  test_serial_manager.py
