[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gloria-m-sdk"
version = "0.1.0"
description = "Serial-to-CAN actuator control SDK with MIT/PV demos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pyserial>=3.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

